# shell_1

./: CMakeLists.txt  copy_test.txt  cp.cpp  cp.h  main.cpp
